// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code editor plugins.decorate exits when not relevent 1`] = `Array []`;

exports[`Code editor plugins.decorate exits when not relevent 2`] = `Array []`;

exports[`Code editor plugins.decorate renders a placeholder 1`] = `Array []`;

exports[`Code editor plugins.renderNode renders a line when passed 1`] = `
<Line
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  element={
    Object {
      "content": Object {},
      "subtype": "ObojoboDraft.Chunks.Code.CodeLine",
      "type": "ObojoboDraft.Chunks.Code",
    }
  }
/>
`;

exports[`Code editor plugins.renderNode renders code when passed 1`] = `
<SlateWrapper
  attributes={
    Object {
      "dummy": "dummyData",
    }
  }
  dummy="dummyData"
  element={
    Object {
      "content": Object {},
      "type": "ObojoboDraft.Chunks.Code",
    }
  }
/>
`;

exports[`Code editor queries.createCodeLinesFromText builds text lines 1`] = `
Array [
  Immutable.Record {
    "data": Immutable.Map {
      "content": Object {
        "indent": 0,
      },
    },
    "key": "0",
    "nodes": Immutable.List [
      Immutable.Record {
        "leaves": Immutable.List [
          Immutable.Record {
            "marks": Immutable.Set [],
            "text": "mock text",
          },
        ],
        "key": "1",
      },
    ],
    "type": "ObojoboDraft.Chunks.Code.CodeLine",
  },
]
`;
